--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -115,7 +115,23 @@ html {
   border-right: none;
 }
 
-::selection
+/* Custom */
+span::selection
 {
   background-color: aliceblue;
+}
+
+::selection
+{
+  background-color: rgb(203, 228, 250);
+}
+
+em 
+{
+  font-weight: 900;
+}
+
+blockquote 
+{
+  border-left: 5px solid #838383 !important;
 }
