--- a/src/components/blog/BlogContent.astro
+++ b/src/components/blog/BlogContent.astro
@@ -4,14 +4,15 @@ interface Props {
 }
 
 const { content } = Astro.props;
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <article class='prose-slate w-sm md:w-prose md:prose poppins'>
-  <a href='/blog/' title='Back to blog'>&larr; Back to blog</a>
+  <a href={`${baseUrl}/blog/`} title='Back to blog'>&larr; Back to blog</a>
   <p class='text-slate text-sm md:text-base'>
     Published on {content.pubDate} by {content.author}
   </p>
   <slot />
   <p class='text-slate'>Written by {content.author}</p>
-  <a href='/blog/' title='Back to blog'>&larr; Back to blog</a>
+  <a href={`${baseUrl}/blog/`} title='Back to blog'>&larr; Back to blog</a>
 </article>
