--- a/src/components/blog/BlogSummaryCard.astro
+++ b/src/components/blog/BlogSummaryCard.astro
@@ -9,6 +9,7 @@ interface Props {
 }
 
 const { post } = Astro.props;
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <SummaryCard
@@ -18,7 +19,7 @@ const { post } = Astro.props;
   description={post.data.description}
 >
   <div class='flex justify-end my-4'>
-    <Button href={`/blog/${post.slug}/`}>Read post &rarr;</Button>
+    <Button href={`${baseUrl}/blog/${post.slug}/`}>View Post &rarr;</Button>
   </div>
 
   <div class='hidden sm:inline-block'>
@@ -29,7 +30,7 @@ const { post } = Astro.props;
           post.data.tags.map((tag) => {
             return (
               <li>
-                <a class="sanchez" href={`/blog/tags/${tag.toLowerCase()}/`}>
+                <a class="sanchez" href={`${baseUrl}/blog/tags/${tag.toLowerCase()}/`}>
                   <Pill>{tag}</Pill>
                 </a>
               </li>
