--- a/src/components/generic/SummaryCard.astro
+++ b/src/components/generic/SummaryCard.astro
@@ -13,7 +13,7 @@ const { title, imgAlt, imgSrc, description } = Astro.props;
 ---
 
 <Card color='white'>
-  <h3 class='poppins text-lg md:text-xl'>{title}</h3>
+  <h3 class='poppins text-lg md:text-xl font-bold'>{title}</h3>
   <div class='rounded-lg border-3 border-black my-4 h-56'>
     <Image
       src={imgSrc}
