--- a/src/components/home/MobileSocials.astro
+++ b/src/components/home/MobileSocials.astro
@@ -2,18 +2,18 @@
 const socials = [
   {
     name: 'GitHub',
-    url: 'https://github.com/eliancodes',
+    url: 'https://github.com/randymfournier',
     icon: 'i-uil-github',
   },
   {
-    name: 'Twitter',
-    url: 'https://www.twitter.com/eliancodes',
-    icon: 'i-uil-twitter',
+    name: 'LinkedIn',
+    url: 'https://www.linkedin.com/in/randymfournier/',
+    icon: 'i-uil-linkedin',
   },
   {
-    name: 'LinkedIn',
-    url: 'https://www.linkedin.com/in/elianvancutsem',
-    icon: 'i-uil-linkedin',
+    name: 'Medium',
+    url: 'https://medium.com/@randy.m.fournier',
+    icon: 'i-uil-medium-m',
   },
 ];
 ---
