--- a/src/components/layout/BaseNavigation.astro
+++ b/src/components/layout/BaseNavigation.astro
@@ -3,23 +3,31 @@ interface Props {
   pageTitle?: string;
 }
 
+const baseUrl = import.meta.env.BASE_URL;
+
 const navigationItems = [
-  { name: 'Home', url: '/' },
-  { name: 'Blog', url: '/blog/' },
+  { name: 'Home', url: `${baseUrl}` },
+  { name: 'Blog', url: `${baseUrl}/blog/` },
+  { name: 'Projects', url: `${baseUrl}/project/` },
 ];
 
 const socialIcons = [
   {
     name: 'GitHub',
-    url: 'https://github.com/eliancodes/brutal',
+    url: 'https://github.com/randymfournier',
     icon: 'i-uil-github',
   },
   {
-    name: 'Twitter',
-    url: 'https://www.twitter.com/eliancodes',
-    icon: 'i-uil-twitter',
+    name: 'LinkedIn',
+    url: 'https://www.linkedin.com/in/randymfournier/',
+    icon: 'i-uil-linkedin',
   },
-  { name: 'RSS', url: '/feed.xml', icon: 'i-uil-rss' },
+  {
+    name: 'Medium',
+    url: 'https://medium.com/@randy.m.fournier',
+    icon: 'i-uil-medium-m',
+  },
+  { name: 'RSS', url: `${baseUrl}/feed.xml`, icon: 'i-uil-rss' },
 ];
 
 const { pageTitle } = Astro.props;
@@ -27,8 +35,8 @@ const { pageTitle } = Astro.props;
 
 <header class='border-b-4 border-black flex justify-between p-6 items-center'>
   {pageTitle && <h1 class='hidden'>{pageTitle}</h1>}
-  <a href='/' title='Back to Home'>
-    <p class='righteous md:text-5xl'>Brutal</p>
+  <a href={`${baseUrl}`} title='Back to Home'>
+    <p class='righteous md:text-5xl'>Randy M Fournier</p>
   </a>
   <nav class='hidden md:inline-block'>
     <h2 class='hidden'>Navigation</h2>
@@ -53,7 +61,7 @@ const { pageTitle } = Astro.props;
               href={item.url}
               class='hover:text-green hover:underline transition-all duration-150 ease-in-out'
               target='_blank'
-              title={`'See @ElianCodes on ${item.name}`}
+              title={`Follow me on ${item.name}`}
             >
               <div class:list={[item.icon, 'w-6 h-6']} />
             </a>
@@ -64,8 +72,9 @@ const { pageTitle } = Astro.props;
   </nav>
   <nav class='md:hidden flex'>
     <h2 class='hidden'>Mobile Navigation</h2>
-    <ul>
-      <li><a href='/blog/'>Blog</a></li>
+    <ul class='flex justify-between'>
+      <li class="px-4"><a href={`${baseUrl}/blog/`}>Blog</a></li>
+      <li><a href={`${baseUrl}/project/`}>Projects</a></li>
     </ul>
   </nav>
 </header>
