--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -6,14 +6,14 @@ import BlogList from '@components/blog/BlogList.astro';
 import { Button } from '@eliancodes/brutal-ui';
 
 export async function getStaticPaths() {
-  const allPosts = await getCollection('blog').then((collection) =>
+  const allPosts = await getCollection('blog').then((collection: any) =>
     collection.reverse()
   );
 
   const tags: string[] = [];
 
-  allPosts.forEach((post) => {
-    post.data.tags.forEach((tag) => {
+  allPosts.forEach((post: any) => {
+    post.data.tags.forEach((tag: any) => {
       tags.push(tag.toLowerCase());
     });
   });
@@ -23,8 +23,8 @@ export async function getStaticPaths() {
       params: { tag },
       props: {
         tag,
-        blogposts: allPosts.filter((post) =>
-          post.data.tags.map((tag) => tag.toLowerCase()).includes(tag)
+        blogposts: allPosts.filter((post: any) =>
+          post.data.tags.map((tag: any) => tag.toLowerCase()).includes(tag)
         ),
       },
     };
@@ -37,6 +37,7 @@ interface Props {
 }
 
 const { tag, blogposts } = Astro.props;
+const baseUrl = import.meta.env.BASE_URL;
 ---
 
 <Layout
@@ -44,9 +45,9 @@ const { tag, blogposts } = Astro.props;
   description={`Brutal Blog | All posts tagged with ${tag}`}
   pageTitle={`Brutal Blog | Blogposts tagged with ${tag}`}
 >
-  <main class='p-6 bg-purple grid gap-4'>
+  <main class='p-6 bg-green grid gap-4'>
     <div>
-      <Button href='/blog/'>&larr; Back to blog</Button>
+      <Button href={`${baseUrl}/blog/`}>&larr; Back to blog</Button>
     </div>
     <BlogList posts={blogposts} />
   </main>
