Cleaned up sections

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const technologies = [
 >
   <main class='bg-#D2B48C p-6'>
     <MobileSocials />
-    <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'>
+    <section id='headline' class='grid md:grid-cols-8 gap-8 mt-4'>
 
       <div class='col-span-8'>
         <Card color='#818cf8'>
@@ -55,6 +55,10 @@ const technologies = [
           </div>
         </Card>
       </div>
+
+    </section>
+
+    <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'></section>>
 
       <div class='col-span-4'>
         <Card color='#a3e635'>
@@ -106,7 +110,9 @@ const technologies = [
           </ul>
         </Card>
       </div>
+
     </section>
+    
     <FeaturedProjectPosts />
     <RecentBlogPosts />
   </main>
