--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ const technologies = [
     <MobileSocials />
     <section id='headline' class='grid md:grid-cols-8 gap-8 mt-4'>
 
-      <div class='col-span-8'>
+      <div class='col-span-8 mb-4 mt-4'>
         <Card color='#818cf8'>
           <div class='flex flex-col justify-between items-start items-center gap-4'>
             <p class='mt-4 outfit text-2xl md:text-5xl lg:text-7xl'>
@@ -58,9 +58,9 @@ const technologies = [
 
     </section>
 
-    <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'></section>>
+    <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'></section>
 
-      <div class='col-span-4'>
+      <div class='col-span-4 mb-8'>
         <Card color='#a3e635'>
           <h2 class='text-2xl md:text-4xl lg:text-6xl mb-4 dm-serif'>
             About Me
