New project post first draft

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,7 +58,7 @@ const technologies = [
 
     </section>
 
-    <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'></section>
+    <section id='about' class='grid md:grid-cols-8 gap-8 mt-4'>
 
       <div class='col-span-4 mb-8'>
         <Card color='#a3e635'>
